--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </video>
         </div>
 
-        <p>You've made this February truly special. <br> Can't wait for our evening together!</p>
+        <p>You've made this February truly special love. <br>Cant wait see you Ali!</p>
         <div style="font-size: 40px; margin-top: 10px;">🪻💜🥂</div>
     </div>
 
@@ -233,3 +233,4 @@
     </script>
 </body>
 </html>
+
